Refacto Claude: - update map, les appels de move ne se font pas tout le temps, c'est le mobile qui calcule dans quelle space on est